--- a/bookit/bookit.csproj
+++ b/bookit/bookit.csproj
@@ -14,6 +14,19 @@
 
   <ItemGroup>
     <Folder Include="Areas\Identity\Services\" />
+    <Folder Include="wwwroot\books\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Views\Book\More.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Book\Gallery.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Order\Receipt.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
   </ItemGroup>
 
 </Project>
