--- a/bookit/bookit.csproj
+++ b/bookit/bookit.csproj
@@ -27,6 +27,9 @@
     <Content Update="Views\Order\Receipt.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Views\Shared\_BookItemThumb.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
   </ItemGroup>
 
 </Project>
